--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "test:watch": "vitest",
     "test:size": "npm i && size-limit",
     "test:coverage": "vitest run --coverage",
-    "all": "npm run lint && npm run check && npm t && npm run build && npm run preview"
+    "release": "npm run lint && npm run check && npm t && npm run build",
+    "host": "npm run lint && npm run check && npm t && npm run build && npm run preview"
   },
   "dependencies": {
     "@js-temporal/polyfill": "^0.4.0",
