--- a/package.json
+++ b/package.json
@@ -70,7 +70,6 @@
   },
   "dependencies": {
     "@googleapis/calendar": "^7.0.0",
-    "@js-temporal/polyfill": "^0.4.4",
     "cropperjs": "^1.5.13",
     "googleapis": "^134.0.0",
     "html-to-text": "^9.0.5",
@@ -80,6 +79,7 @@
     "rrule": "^2.7.2",
     "rss": "^1.2.2",
     "svelte-confetti": "^2.3.2",
-    "svelte-meta-tags": "^4.4.1"
+    "svelte-meta-tags": "^4.4.1",
+    "temporal-polyfill": "^0.3.0"
   }
 }
